--- a/style/_theme.scss
+++ b/style/_theme.scss
@@ -1,8 +1,24 @@
 @import 'branding';
-
 nav.navbar {
   &.navbar-default {
     background: $color-black;
     border-radius: 0;
+    .navbar-brand {
+      text-shadow: none;
+      color: $color-white;
+    }
+    ul.navbar-nav {
+      > li {
+        > a {
+          text-shadow: none;
+          &:hover {
+            color: $color-white;
+          }
+        }
+      }
+      i.fa {
+        font-size: 20px;
+      }
+    }
   }
 }
