--- a/style/_theme.scss
+++ b/style/_theme.scss
@@ -1,4 +1,9 @@
 @import 'branding';
+
+.container {
+  background: $color-white;
+}
+
 nav.navbar {
   &.navbar-default {
     background: $color-black;
