--- a/style/style.scss
+++ b/style/style.scss
@@ -50,6 +50,7 @@ body {
     code {
       background-color: transparent;
       color: inherit;
+      padding: 0;
       font-family: 'Inconsolata', 'Menlo', 'Monaco', 'Consolas';
       opacity: 0.3;
     }
@@ -65,16 +66,19 @@ body {
       color: $color-white;
       padding: 30px;
       &:first-child {
+        // border: solid 3px $color-primary;
         > i {
           color: $color-primary;
         }
       }
       &:nth-child(2) {
+        // border: solid 3px $color-alt1;
         > i {
           color: $color-alt1;
         }
       }
       &:last-child {
+        // border: solid 3px $color-alt2;
         > i {
           color: $color-alt2;
         }
