Add meta tag for phone responsive stuff

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,10 @@ include ./_mixins.jade
 html
   head
     title= 'mtgibbs.xyz'
+    meta(
+      name='viewport'
+      content='width=device-width, initial-scale=1.0'
+    )
     include ./_styles.jade
   body
     nav(class='navbar navbar-default navbar-dark')
