Adding email link

--- a/views/index.jade
+++ b/views/index.jade
@@ -35,6 +35,10 @@ html
               a(href='https://www.linkedin.com/in/mtgibbs21')
                 | LinkedIn 
                 i.fa.fa-linkedin-square
+            li
+              a(href='mailto:matt@mtgibbs.xyz')
+                | Email 
+                i.fa.fa-envelope-square
     // end nav
     
     div.container
