Revert "Swapping out some icons."
This reverts commit eff65d2d72eb25ac6d5637f295f3379e33f1d088.

--- a/views/_mixins.jade
+++ b/views/_mixins.jade
@@ -1,5 +1,5 @@
 mixin info-cell(iconClass, headerText, paragraphText)
   div.col-md-4
-    i.icon(class= iconClass)
+    i.fa(class= iconClass)
     h2= headerText
     p= paragraphText
