Swapping out some icons.

--- a/views/_mixins.jade
+++ b/views/_mixins.jade
@@ -1,5 +1,5 @@
 mixin info-cell(iconClass, headerText, paragraphText)
   div.col-md-4
-    i.fa(class= iconClass)
+    i.icon(class= iconClass)
     h2= headerText
     p= paragraphText
