Using the ionicons
Not sure I like these.

--- a/views/index.jade
+++ b/views/index.jade
@@ -30,15 +30,15 @@ html
             li
               a(href='https://github.com/mtgibbs')
                 | GitHub 
-                i.icon.icon-github
+                i.ion.ion-social-github
             li
               a(href='https://www.linkedin.com/in/mtgibbs21')
                 | LinkedIn 
-                i.icon.icon-linkedin
+                i.ion.ion-social-linkedin
             li
               a(href='mailto:matt@mtgibbs.xyz')
                 | Email 
-                i.icon.icon-email
+                i.ion.ion-ios-email
     // end nav
     
     div.container
@@ -51,9 +51,9 @@ html
         div.hero-shadow-panel
         
       div.info-cells
-        +info-cell('icon-code', 'Developer', placeholderText)
-        +info-cell('icon-game-controller', 'Game Enthusiast', placeholderText)
-        +info-cell('icon-text', 'TODO', placeholderText)
+        +info-cell('ion-code', 'Developer', placeholderText)
+        +info-cell('ion-ios-game-controller-a-outline', 'Game Enthusiast', placeholderText)
+        +info-cell('ion-quote', 'TODO', placeholderText)
     
     include ./_scripts.jade
         
