Adding user-select: none
Just to keep it looking nice.  I should probably refine this to only be areas and links, but let the actual text content be selected.

--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,7 @@
 @import 'branding';
 @import 'theme';
 body {
+  user-select: none;  
   color: $color-black;
   background: $color-black;
   // font-family: 'Oxygen Mono',;
