Strip out some unused fonts for faster fetch.

--- a/views/_styles.jade
+++ b/views/_styles.jade
@@ -1,6 +1,6 @@
 link(
-  href='https://fonts.googleapis.com/css?family=Inconsolata:400,700|Poiret+One|Comfortaa:400,700,300|Oxygen+Mono' 
-  rel='stylesheet' 
+  href='https://fonts.googleapis.com/css?family=Poiret+One|Inconsolata:400,700'
+  rel='stylesheet'
   type='text/css'
 )
 link(
