--- a/views/index.jade
+++ b/views/index.jade
@@ -66,7 +66,7 @@ html
           a(href='http://www.twitch.tv/pwnysenpai/profile')
             i.fa.fa-gamepad
           h2 Game Enthusiast
-          p Games are what developed my passion for software.  Games often
+          p Games are what developed my passion for software.  They often
             | provide scenarios that let the user dissect patterns, iterate on
             | solutions, and feel the rush of accomplishment when they have
             | finally executed or arrived at the solution.  All within a framework
@@ -78,7 +78,7 @@ html
           a(href='http://blog.mtgibbs.xyz')
             i.fa.fa-rss
           h2 Blog
-          p Here is the lack of a collection of thoughts that I made because
+          p #[a(href='http://blog.mtgibbs.xyz') Here] is the lack of a collection of thoughts that I made because
             | I was interested in seeing how Jekyll worked.  It exists solely
             | for practice with something new and potentially for
             | making ideas concrete by putting them into words.
