Adding copyright to theming.
I really just wanted something to make it easier to spot my styling in the minified output.  ;)

--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,8 @@
+/*!
+ * Styling for mtgibbs.xyz
+ * Copyright 2016 Matt Gibbs <matt@mtgibbs.xyz>
+ */
+
 @import 'branding';
 @import 'theme';
 body {
