Trying to normalize some of the spaces in the paragraphs.

--- a/views/index.jade
+++ b/views/index.jade
@@ -53,34 +53,35 @@ html
           a(href='https://github.com/mtgibbs')
             i.fa.fa-code
           h2 Developer
-          p Actually more of just a problem solver.  I am a full stack developer
+          p Actually more of just a problem solver.  I am a full stack developer 
             | currently working primarily in C#, Typescript, and javascript on 
             | Hewlett-Packard Enterprise's #[a(href='https://hpfod.com') Fortify on Demand] 
-            | product.  My interests lie in web technologies, user experience, and most
-            | recently the "Internet of Things."  I've worked in several
-            | industries, from insurance to software security, and in several
-            | problem domains like high volume transaction processing systems
-            | and web interfaces.
+            | product.  My interests lie in web technologies, user experience, and most 
+            | recently the "Internet of Things."  I've worked in several 
+            | industries, from insurance to software security, and in several 
+            | problem domains like high volume transaction processing systems 
+            | and web interfaces. 
             
         div.col-md-4
           a(href='http://www.twitch.tv/pwnysenpai/profile')
             i.fa.fa-gamepad
           h2 Game Enthusiast
-          p Games are what developed my passion for software.  They often
-            | provide scenarios that let the user dissect patterns, iterate on
-            | solutions, and feel the rush of accomplishment when they have
-            | finally executed or arrived at the solution.  All within a framework
-            | of defined rulesets and a tight feedback loop.  So it's not really
-            | a surprise that someone with an interest in software would also
+          p Games are what developed my passion for software.  They often 
+            | provide scenarios that let the user dissect patterns, iterate on 
+            | solutions, and feel the rush of accomplishment when they have 
+            | finally executed or arrived at the solution.  All within a framework 
+            | of defined rulesets and a tight feedback loop.  So it's not really 
+            | a surprise that someone with an interest in software would also 
             | have an interest in games.
           
         div.col-md-4
           a(href='http://blog.mtgibbs.xyz')
             i.fa.fa-rss
           h2 Blog
-          p #[a(href='http://blog.mtgibbs.xyz') Here] is the lack of a collection of thoughts that I made because
-            | I was interested in seeing how Jekyll worked.  It exists solely
-            | for practice with something new and potentially for
-            | making ideas concrete by putting them into words.
+          p #[a(href='http://blog.mtgibbs.xyz') Here] is the lack of a 
+            | collection of thoughts that I made because I was interested in 
+            | seeing how Jekyll worked.  It exists solely for practice with 
+            | something new and potentially for making ideas concrete by putting 
+            | them into words. 
 
     include ./_scripts.jade
