Set navbar color

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,4 +1,9 @@
+@import "../../_branding.scss";
+
 nav {
+
+    background-color: $color-black;
+
     @media (min-width: 992px) {
 
         text-align: center;
