--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,15 @@
 html, body {
     font-family: 'Lato', sans-serif;
 }
+
+small {
+    font-weight: 100;
+}
+
+h2 {
+    text-transform: uppercase;
+}
+
+section {
+    min-height: 100vh;
+}
