--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top" id="nav">
+<!-- <div class="col-12 col-md-3 col-xl-2 bd-sidebar" id="nav"> -->
 
   <a class="navbar-brand js-scroll-trigger" href="#page-top">
     <span class="d-block d-lg-none">Matt Gibbs</span>
