--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,51 @@
+<div class="container-fluid">
 
-    <app-navbar>
-    </app-navbar>
+    <div class="row flex-md-nowrap">
+        <app-navbar></app-navbar>
 
-    <div class="container p-0">
-        <section class="p-3 p-lg-5 d-flex flex-column" id="about">
-            <div class="my-auto">
-                <h1 class="mb-0">
-                    Matt Gibbs
-                    <small>Software Developer</small>
-                </h1>
+        <div class="col-md-12 col-sm-12 col-lg-10 ml-auto">
+            <div class="container-fluid p-0">
+                <section class="p-3 p-lg-5 d-flex flex-column" id="about">
+                    <div class="my-auto">
+                        <h1 class="mb-0">
+                            Matt Gibbs
+                            <small>Software Developer</small>
+                        </h1>
+                    </div>
+                </section>
+
+                <section class="p-3 p-lg-5 d-flex flex-column" id="experience">
+                    <div class="my-auto">
+                        <h2 class="mb-5">Experience</h2>
+
+                        <app-experience-item-list [items]="experience"></app-experience-item-list>
+                    </div>
+                </section>
+
+                <section class="p-3 p-lg-5 d-flex flex-column" id="education">
+                    <div class="my-auto">
+                        <h2 class="mb-5">Education</h2>
+
+                    </div>
+                </section>
+
+                <section class="p-3 p-lg-5 d-flex flex-column" id="skills">
+                    <div class="my-auto">
+                        <h2 class="mb-5">Skills</h2>
+
+                    </div>
+                </section>
+
+                <section class="p-3 p-lg-5 d-flex flex-column" id="interests">
+                    <div class="my-auto">
+                        <h2 class="mb-5">Interests</h2>
+
+                    </div>
+                </section>
+
             </div>
-        </section>
+        </div>
 
-        <section class="p-3 p-lg-5 d-flex flex-column" id="experience">
-            <div class="my-auto">
-                <h2 class="mb-5">Experience</h2>
-                
-                <app-experience-item-list [items]="experience"></app-experience-item-list>
-            </div>
-        </section>
 
-        <section class="p-3 p-lg-5 d-flex flex-column" id="education">
-            <div class="my-auto">
-                <h2 class="mb-5">Education</h2>
-
-            </div>
-        </section>
-
-        <section class="p-3 p-lg-5 d-flex flex-column" id="skills">
-            <div class="my-auto">
-                <h2 class="mb-5">Skills</h2>
-
-            </div>
-        </section>
-
-        <section class="p-3 p-lg-5 d-flex flex-column" id="interests">
-            <div class="my-auto">
-                <h2 class="mb-5">Interests</h2>
-
-            </div>
-        </section>
 
     </div>
