--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,6 @@
             <section class="p-3 p-lg-5 d-flex flex-column" id="experience">
                 <div class="my-auto">
                     <h2 class="mb-5">Experience</h2>
-
                     <app-experience-item-list [items]="experience"></app-experience-item-list>
                 </div>
             </section>
@@ -39,7 +38,7 @@
             <section class="p-3 p-lg-5 d-flex flex-column" id="education">
                 <div class="my-auto">
                     <h2 class="mb-5">Education</h2>
-
+                    <app-experience-item-list [items]="education"></app-experience-item-list>
                 </div>
             </section>
 
