Big list of tech icons
Marketing pages always have that label section, so I figured I'd have
one too

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,7 @@
                 <div class="my-auto">
                     <h2 class="mb-5">Skills</h2>
 
+                    <app-dev-icon-list [icons]="skillIcons"></app-dev-icon-list>
                 </div>
             </section>
 
