"skill" icons styled
FLEXBOXBB

--- a/src/app/dev-icon-list/dev-icon-list.component.html
+++ b/src/app/dev-icon-list/dev-icon-list.component.html
@@ -1,5 +1,5 @@
-<ul>
-  <li *ngFor="let option of icons">
+<div class="d-flex flex-wrap justify-content-center">
+  <div class="p-2" *ngFor="let option of icons">
     <app-dev-icon [options]="option"></app-dev-icon>
-  </li>
-</ul>
+  </div>
+</div>
