--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,11 +13,10 @@
 
                     <p>
                         Actually more of just a problem solver. I am a full stack developer currently working in C#, Java, and Typescript on
-                        <a
-                            href="https://ams.fortify.com">Fortify on Demand</a>. My interests lie in Web Technologies, User Experience, and most recently the
-                            Continuous Integration. I've worked in several industries, from insurance to software security,
-                            and in several problem domains like high volume transaction processing systems, legacy modernization,
-                            and web interfaces.
+                        <a href="https://ams.fortify.com">Fortify on Demand</a>. My interests lie in Web Technologies, User Experience, and most recently the
+                        Continuous Integration. I've worked in several industries, from insurance to software security, and
+                        in several problem domains like high volume transaction processing systems, legacy modernization,
+                        and web interfaces.
                     </p>
 
                     <ul>
