--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+<app-navbar [title]="title"></app-navbar>
 
-<div class="container-fluid">
+<main class="container-fluid">
 
     <div class="col-md-12 col-sm-12 col-lg-10 ml-auto">
         <div class="container-fluid p-0">
@@ -58,4 +58,4 @@
 
         </div>
     </div>
-</div>
+</main>
