--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,9 @@
 #about {
     h1 {
+        @media (max-width: 990px) {
+            margin-top: 3em;
+        }
+
         small {
             display: block;
             font-size: .6em;
