--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,7 @@
-<nav class="navbar navbar-expand-lg fixed-top" id="nav">
-<!-- <div class="col-12 col-md-3 col-xl-2 bd-sidebar" id="nav"> -->
+<nav class="navbar navbar-inverse bg-inverse navbar-dark navbar-expand-lg fixed-top" id="nav">
 
   <a class="navbar-brand js-scroll-trigger" href="#page-top">
-    <span class="d-block d-lg-none">Matt Gibbs</span>
+    <span class="d-block d-lg-none">{{ title }}</span>
     <span class="d-none d-lg-block">
       <img class="img-fluid img-profile mx-auto mb-2" src="/assets/profile.png" alt="me">
     </span>
