Override right margin in bootstrap css

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -2,6 +2,10 @@
 
 nav {
 
+    .navbar-brand {
+        margin-right: initial;
+    }
+
     background-color: $color-black;
 
     @media (min-width: 992px) {
