--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,18 @@
 <nav class="navbar navbar-inverse bg-inverse navbar-dark navbar-expand-lg fixed-top" id="nav">
 
-  <a class="navbar-brand js-scroll-trigger" href="#page-top">
+  <a class="navbar-brand js-scroll-trigger" href="#about">
     <span class="d-block d-lg-none">{{ title }}</span>
     <span class="d-none d-lg-block">
       <img class="img-fluid img-profile mx-auto mb-2" src="/assets/profile.png" alt="me">
     </span>
   </a>
 
-  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+  <button class="navbar-toggler collapsed" type="button" (click)="isCollapsed = !isCollapsed" data-target="#navItems" aria-controls="navbarSupportedContent"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="navbar-collapse collapse" id="navbarSupportedContent">
+  <div class="navbar-collapse collapse" id="navItems" [ngbCollapse]="isCollapsed">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger active" href="#about">About</a>
