Trying less white of white

--- a/src/_branding.scss
+++ b/src/_branding.scss
@@ -2,4 +2,4 @@ $color-black: #1e1e21;
 $color-primary: #2E85D8;
 $color-alt1: #FF6C26;
 $color-alt2: #645CE8;
-$color-white: #fff;
+$color-white: #f3f3f3;
