Plug in the new white color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ html, body {
     font-family: 'Lato', sans-serif;
     color: $color-black;
     scroll-behavior: smooth;
+    background: $color-white;
 }
 
 small {
