--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -2,6 +2,10 @@
 
 nav {
 
+    .nav-link.active {
+        color: $color-white;
+    }
+
     .navbar-brand {
         margin-right: initial;
     }
