--- a/src/_branding.scss
+++ b/src/_branding.scss
@@ -1,5 +1,5 @@
 $color-black: #1e1e21;
-$color-primary: #2E85D8;
+$color-primary: #645CE8;
 $color-alt1: #FF6C26;
-$color-alt2: #645CE8;
-$color-white: #f3f3f3;
+$color-alt2: #2E85D8;
+$color-white: #fdfdfd;
