Add some interests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,6 +53,7 @@
                 <div class="my-auto">
                     <h2 class="mb-5">Interests</h2>
 
+                    <app-experience-item-list [items]="interests"></app-experience-item-list>
                 </div>
             </section>
 
