THE CONTINUOUS INTEGRATION

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 
                     <p class="my-5">
                         Actually more of just a problem solver. I am a full stack developer currently working in C#, Java, and Typescript on
-                        <a href="https://ams.fortify.com">Fortify on Demand</a>. My interests lie in Web Technologies, User Experience, and most recently the
+                        <a href="https://ams.fortify.com">Fortify on Demand</a>. My interests lie in Web Technologies, User Experience, and most recently
                         Continuous Integration. I've worked in several industries, from insurance to software security, and
                         in several problem domains like high volume transaction processing systems, legacy modernization,
                         and web interfaces.
