--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,7 +24,7 @@
         <a class="nav-link js-scroll-trigger" [ngClass]="{'active': currentTarget == '#education'}" (click)="onClick($event)" href="#education">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" [ngClass]="{'active': currentTarget == '#skills'}" (click)="onClick($event)" href="#skills">Skills</a>
+        <a class="nav-link js-scroll-trigger" [ngClass]="{'active': currentTarget == '#technologies'}" (click)="onClick($event)" href="#technologies">Technologies</a>
       </li>
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" [ngClass]="{'active': currentTarget == '#interests'}" (click)="onClick($event)" href="#interests">Interests</a>
