--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,9 +41,9 @@
                 </div>
             </section>
 
-            <section class="p-3 p-lg-5 d-flex flex-column" id="skills">
+            <section class="p-3 p-lg-5 d-flex flex-column" id="technologies">
                 <div class="my-auto">
-                    <h2 class="mb-5">Skills</h2>
+                    <h2 class="mb-5">Technologies</h2>
 
                     <app-dev-icon-list [icons]="skillIcons"></app-dev-icon-list>
                 </div>
