--- a/src/app/experience-item/experience-item.component.html
+++ b/src/app/experience-item/experience-item.component.html
@@ -2,9 +2,9 @@
   <div class="resume-content mr-auto">
     <h3 class="mb-0">{{ item.title }}</h3>
     <div class="mb-3">{{ item.subTitle }}</div>
-    <p>{{ item.description }}</p>
+    <p class="pr-4">{{ item.description }}</p>
   </div>
-  <div *ngIf="item.startDate && item.endDate" class="text-md-right">
+  <div *ngIf="item.startDate && item.endDate" class="text-md-right col-md-3 col-sm-12 mr-auto">
     <span class="text-primary">{{ item.startDate }} - {{ item.endDate }}</span>
   </div>
 </div>
