Lighten the subtitle

--- a/src/app/experience-item/experience-item.component.html
+++ b/src/app/experience-item/experience-item.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column flex-md-row mb-5">
   <div class="resume-content mr-auto">
     <h3 class="mb-0">{{ item.title }}</h3>
-    <div class="mb-3">{{ item.subTitle }}</div>
+    <div class="subtitle mb-3">{{ item.subTitle }}</div>
     <p class="pr-4">{{ item.description }}</p>
   </div>
   <div *ngIf="item.startDate && item.endDate" class="text-md-right col-md-3 col-sm-12 mr-auto">
