--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,13 +3,13 @@
         <span class="font-semibold text-xl tracking-tight">mtgibbs.xyz</span>
     </div>
     <div class="block lg:hidden">
-        <button
+        <!-- <button
             class="flex items-center px-3 py-2 border rounded text-teal-200 border-teal-400 hover:text-white hover:border-white">
             <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <title>Menu</title>
                 <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
             </svg>
-        </button>
+        </button> -->
     </div>
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
         <!-- <div class="text-sm lg:flex-grow">
@@ -23,9 +23,15 @@
                 Blog
             </a>
         </div> -->
-        <div class="justify-self-end">
+        <div class="flex flex-row-reverse">
             <a href="https://github.com/mtgibbs" class="text-lg bg-gray-100 hover:bg-blue-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
                 Github <i class="fa fa-github-square"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/mtgibbs21" class="text-lg bg-gray-100 hover:bg-blue-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
+                LinkedIn <i class="fa fa-linkedin-square"></i>
+            </a>
+            <a href="mailto:matt@mtgibbs.xyz" class="text-lg bg-gray-100 hover:bg-blue-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
+                Email <i class="fa fa-envelope-square"></i>
             </a>
         </div>
     </div>
