--- a/src/app/experience-list/experience-item.component.scss
+++ b/src/app/experience-list/experience-item.component.scss
@@ -1,9 +1,9 @@
 @mixin leftItemSet() {
-    @apply ml-4 sm:ml-8 md:ml-16 rounded-l-md;
+    @apply ml-0 pl-4 sm:ml-8 sm:pl-0 md:ml-16 rounded-l-md;
 }
 
 @mixin rightItemSet() {
-    @apply mr-4 sm:mr-8 md:mr-16 rounded-r-md;
+    @apply mr-0 pr-4 sm:mr-8 sm:pr-0 md:mr-16 rounded-r-md;
 }
 
 div.experience-item-container {
@@ -12,26 +12,50 @@ div.experience-item-container {
 
     >div {
 
-        @apply bg-gray-100 shadow-md p-8 rounded-none sm:rounded-md mx-0 sm:mx-8;
+        @apply  relative ;
+
+        >div.experience-details {
+            @apply bg-gray-100 shadow-md p-8 rounded-none sm:rounded-md mx-0 sm:mx-8 z-10 relative;
+        }
 
         &[index="0"] {
             @include leftItemSet();
+
+            >div.experience-details {
+                @apply rounded-l-md;
+            }
         }
 
         &[index="1"] {
             @include rightItemSet();
+
+            >div.experience-details {
+                @apply rounded-r-md;
+            }
         }
 
         &[index="2"] {
             @include leftItemSet();
+
+            >div.experience-details {
+                @apply rounded-l-md;
+            }
         }
 
         &[index="3"] {
             @include rightItemSet();
+
+            >div.experience-details {
+                @apply rounded-r-md;
+            }
         }
 
         &[index="4"] {
             @include leftItemSet();
+
+            >div.experience-details {
+                @apply rounded-l-md;
+            }
         }
     }
 
