--- a/src/app/experience-list/experience-item.component.scss
+++ b/src/app/experience-list/experience-item.component.scss
@@ -6,6 +6,7 @@
     @apply mr-0 pr-4 sm:mr-8 sm:pr-0 md:mr-16 rounded-r-md;
 }
 
+
 div.experience-item-container {
 
     @apply container mx-auto;
@@ -14,49 +15,67 @@ div.experience-item-container {
 
         @apply  relative ;
 
+        >div.backdrop-accent {
+            @apply absolute z-0 inset-0 bg-gradient-to-r from-orange-light to-orange shadow-lg transform -skew-y-3 sm:skew-y-0 sm:-rotate-3 sm:rounded-md;
+        }
+
         >div.experience-details {
-            @apply bg-gray-100 shadow-md p-8 rounded-none sm:rounded-md mx-0 sm:mx-8 z-10 relative;
+            @apply bg-gray-100 shadow-md p-8 rounded-none sm:rounded-md z-10 relative;
         }
 
-        &[index="0"] {
+        &.even {
             @include leftItemSet();
 
             >div.experience-details {
                 @apply rounded-l-md;
             }
+
+            >div.backdrop-accent {
+                @apply bg-gradient-to-l;
+            }
         }
 
-        &[index="1"] {
+        &.odd {
             @include rightItemSet();
 
             >div.experience-details {
                 @apply rounded-r-md;
             }
-        }
 
-        &[index="2"] {
-            @include leftItemSet();
-
-            >div.experience-details {
-                @apply rounded-l-md;
+            >div.backdrop-accent {
+                @apply transform skew-y-3 sm:skew-y-0 sm:rotate-3 from-orange to-orange-light;
             }
         }
 
-        &[index="3"] {
-            @include rightItemSet();
+        // &[index="0"] {
+        //     >div.backdrop-accent {
+        //         @apply from-orange-lightest to-orange-light;
+        //     }
+        // }
 
-            >div.experience-details {
-                @apply rounded-r-md;
-            }
-        }
+        // &[index="1"] {
+        //     >div.backdrop-accent {
+        //         @apply from-orange-light to-orange;
+        //     }
+        // }
 
-        &[index="4"] {
-            @include leftItemSet();
+        // &[index="2"] {
+        //     >div.backdrop-accent {
+        //         @apply from-orange to-orange-light;
+        //     }
+        // }
 
-            >div.experience-details {
-                @apply rounded-l-md;
-            }
-        }
+        // &[index="3"] {
+        //     > div.backdrop-accent {
+        //         @apply from-orange-light to-orange-lightest;
+        //     }
+        // }
+
+        // &[index="4"] {
+        //     >div.backdrop-accent {
+        //         @apply from-orange-lightest to-orange-light;
+        //     }
+        // }
     }
 
 }
