god tier styling

--- a/src/app/experience-list/experience-item.component.scss
+++ b/src/app/experience-list/experience-item.component.scss
@@ -47,6 +47,9 @@ div.experience-item-container {
             }
         }
 
+        // Silly idea for "cool" transition through orange spectrum
+        // might use this to do a cool complete theme spectrum bounce through on something else
+        
         // &[index="0"] {
         //     >div.backdrop-accent {
         //         @apply from-orange-lightest to-orange-light;
